[project]
name = "2025-p1-lyupeiyang"
version = "0.1.0"
description = ""
authors = [
    {name = "PeiyangLyu peiyang.lyu@student.uq.edu.au"}
]
readme = "README.md"
requires-python = ">= 3.9"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
